# cs336-rag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: ground_truth.json
data/eval/: answer_eval.json  retrieval_eval.json
data/raw/: 001-JuoVZkPBiKk.json  002-kuYAsz7zspQ.json  003-lVynu4bo1rY.json  004-cKSwj_qZ8Jg.json  005-izZba4UA7iY.json  006-xnDHaNUvHBg.json  007-SzpOcwdIL0Y.json  008-6-cXp-aOmdg.json  009-Q15rhEWZPQ4.json  010-EfM546A79aM.json  011-vTfEyOyzV9E.json  012-JpAxdTWQJxM.json  013--qm0ln33G24.json  014-5sxHosTLPF8.json  015-2oH6PWPrYFo.json  016-dIFAi87Ws4E.json  017-26FtD08ZpOU.json  018-9EEm4iMAF5s.json
docs/: evaluation.md  monitoring.md  setup.md  usage.md
grafana/dashboards/: cs336-rag.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: postgres.yml
scripts/: seed_demo_data.py
src/cs336_rag/: __init__.py  api.py  cli.py  config.py  conversations.py  db.py  embeddings.py  llm.py  models.py  rag.py  retrieval.py  schema.sql  schema_app.sql  service.py
src/cs336_rag/evals/: __init__.py  answer_eval.py  ground_truth.py  json_scan.py  metrics.py  retrieval_eval.py
src/cs336_rag/ingest/: __init__.py  chunking.py  pipeline.py  transcripts.py
src/cs336_rag/static/: index.html
tests/: conftest.py  test_answer_eval.py  test_api.py  test_chunking.py  test_config.py  test_conversations.py  test_dashboard.py  test_db.py  test_embeddings.py  test_ground_truth.py  test_metrics.py  test_pipeline.py  test_rag.py  test_retrieval.py  test_retrieval_eval.py  test_retrieval_eval_unit.py  test_service.py  test_thinking.py  test_transcripts.py
