[project]
name = "cs336-rag"
version = "0.1.0"
description = "RAG assistant over the Stanford CS336 'Language Modeling from Scratch' lecture series"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Guillermo Serrano", email = "guillermo.serrano.f@gmail.com" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.40",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "youtube-transcript-api>=1.0",
    "yt-dlp>=2025.1.1",
    "tenacity>=9.0",
    "psycopg-pool>=3.2",
]

[project.scripts]
cs336-rag = "cs336_rag.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cs336_rag"]
# schema.sql and static/ are loaded at runtime via importlib.resources
artifacts = ["src/cs336_rag/schema.sql", "src/cs336_rag/static/*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "N",   # pep8-naming
]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["cs336_rag"]

[[tool.mypy.overrides]]
module = ["youtube_transcript_api.*", "pgvector.*", "yt_dlp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that need a running Postgres (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src/cs336_rag"]
